platform/kong/network-policies/kong-allow-controller-admin.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kong-allow-controller-admin
  namespace: platform-kong
  labels:
    banklab.konghq.com/platform-layer: gateway
    banklab.konghq.com/owner: platform-team
spec:
  podSelector:
    matchLabels:
      banklab.konghq.com/component: kic
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              banklab.konghq.com/component: gateway
      ports:
        - protocol: TCP
          port: 8444
