platform/kong/network-policies/kong-allow-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kong-allow-dns
  namespace: platform-kong
  labels:
    banklab.konghq.com/platform-layer: gateway
    banklab.konghq.com/owner: platform-team
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
