platform/kong/network-policies/kong-allow-proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kong-allow-proxy-ingress
  namespace: platform-kong
  labels:
    banklab.konghq.com/platform-layer: gateway
    banklab.konghq.com/owner: platform-team
spec:
  podSelector:
    matchLabels:
      banklab.konghq.com/component: gateway
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 8000
        - protocol: TCP
          port: 8443
