platform/kong/network-policies/kong-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kong-default-deny
  namespace: platform-kong
  labels:
    banklab.konghq.com/platform-layer: gateway
    banklab.konghq.com/owner: platform-team
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
